Создано с помощью Colaboratory

--- a/tasks/Добро_пожаловать_в_Colaboratory!.ipynb
+++ b/tasks/Добро_пожаловать_в_Colaboratory!.ipynb
@@ -13,22 +13,70 @@
     {
       "cell_type": "code",
       "source": [
-        "print(\"Hello world\")"
+        "import random\n",
+        "s=101\n",
+        "a=random.randint(0,100)\n",
+        "k=1\n",
+        "while s!=a:\n",
+        "  s=int(input())\n",
+        "  if s=='выход':\n",
+        "    break\n",
+        "  if s>a:\n",
+        "    print('число боьше заданного')\n",
+        "    k+=1\n",
+        "  if s<a:\n",
+        "    print('число меньше заданного')\n",
+        "    k+=1\n",
+        "  if s==a:\n",
+        "    print(\"красавчик попыток\", k)\n"
       ],
       "metadata": {
+        "id": "GAjhHLQtBCCH",
+        "outputId": "8e1c8d24-5259-4b4f-e55b-6197681f246b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "S7-QDrL4-DBL",
-        "outputId": "3455f94b-5861-47ce-ab88-b571b892d83e"
+        }
       },
-      "execution_count": 1,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Hello world\n"
+            "60\n",
+            "число боьше заданного\n",
+            "50\n",
+            "число боьше заданного\n",
+            "55\n",
+            "число боьше заданного\n",
+            "54\n",
+            "число боьше заданного\n",
+            "53\n",
+            "число боьше заданного\n",
+            "52\n",
+            "число боьше заданного\n",
+            "51\n",
+            "число боьше заданного\n",
+            "50\n",
+            "число боьше заданного\n",
+            "40\n",
+            "число боьше заданного\n",
+            "10\n",
+            "число меньше заданного\n",
+            "15\n",
+            "число меньше заданного\n",
+            "27\n",
+            "число боьше заданного\n",
+            "24\n",
+            "число боьше заданного\n",
+            "22\n",
+            "число боьше заданного\n",
+            "21\n",
+            "число боьше заданного\n",
+            "19\n",
+            "число меньше заданного\n",
+            "20\n",
+            "красавчик попыток 17\n"
           ]
         }
       ]
