Создано с помощью Colaboratory

--- a/tasks/1. Задания/Модуль №2. Числа.ipynb
+++ b/tasks/1. Задания/Модуль №2. Числа.ipynb
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "VsKslLt3CYHW",
         "outputId": "f1585cbc-d83b-4052-e2c5-7ea5619fb938",
@@ -70,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "9cNcyt9kCYx_",
         "outputId": "804b37c4-e139-496e-c810-8ba0fd28b42e",
@@ -104,7 +104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "jQTeznUXCY8p",
         "outputId": "d7e7c447-1b47-4aae-e8df-4fcd2b6ca32b",
@@ -138,7 +138,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "SB_07EHyCZBF",
         "outputId": "8fc91aab-04d9-4953-94c4-bf6b224607c2",
@@ -172,7 +172,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "yHsbLJkVCZEe",
         "outputId": "adbc7017-624c-473b-83dc-ae7ffc5c8bf0",
@@ -206,7 +206,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "cU16zdgxCZIG",
         "outputId": "bffd356f-4f4d-43c1-9788-c17fb744c6e2",
@@ -240,13 +240,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "HgTWrjlWCZLh"
+        "id": "HgTWrjlWCZLh",
+        "outputId": "b250a40a-5e31-49c0-ac82-ee8b20b06174",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2000\n",
+            "20\n"
+          ]
+        }
+      ],
       "source": [
-        "a=int(input())\n"
+        "a = int(input())\n",
+        "print((a-1)//100 + 1)\n"
       ]
     },
     {
@@ -260,13 +274,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "L60_0P2eCZVe"
+        "id": "L60_0P2eCZVe",
+        "outputId": "904eb3f1-a0ad-41d5-b332-5b05d8507d62",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "4\n"
+          ]
+        }
+      ],
       "source": [
-        "# Ваш код"
+        "N = int(input())\n",
+        "print((N + 3)%7)"
       ]
     },
     {
@@ -280,7 +308,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "G9GjVWjvCZcB",
         "outputId": "638f9994-d5f4-4abd-e7e7-c7f55cf4fc7a",
@@ -314,13 +342,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "id": "JXHu7qscCZjZ"
+        "id": "JXHu7qscCZjZ",
+        "outputId": "a88a4c1d-a75b-4d46-829b-72afd53af44a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "20\n",
+            "21\n",
+            "22\n",
+            "32\n"
+          ]
+        }
+      ],
       "source": [
-        "# Ваш код"
+        "a = int(input())\n",
+        "b = int(input())\n",
+        "c = int(input())\n",
+        "print(a//2 + a%2 + b//2 + b%2 + c//2 + c%2)"
       ]
     }
   ]
