Создано с помощью Colaboratory

--- a/tasks/1. Задания/Модуль №3. Строки.ipynb
+++ b/tasks/1. Задания/Модуль №3. Строки.ipynb
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "V-9pALsYHsyX",
         "outputId": "8a25ddb6-c07d-4ee7-edff-2efc1ca33d67",
@@ -70,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "RR8cG4-jHs1I",
         "outputId": "609fa414-0a03-47c0-bfdb-17549e9930e7",
@@ -105,12 +105,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 3,
       "metadata": {
-        "id": "l2X5UFTXHs31"
+        "id": "l2X5UFTXHs31",
+        "outputId": "cecaf72b-e4fa-44f4-b23c-3a3c5abdca61",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "office\n",
+            "1 2\n"
+          ]
+        }
+      ],
+      "source": [
+        "a = str(input())\n",
+        "b = a.find('f')\n",
+        "c = a.rfind('f')\n",
+        "if a.count('f')==1:\n",
+        "  print(b)\n",
+        "if a.count('f')>1:\n",
+        "  print(b,c)\n",
+        "if a.count('f')==0:\n",
+        "  print(b)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -123,7 +146,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "Mh3o7_O7Hs6x",
         "outputId": "21fab89c-995f-4d3d-f69f-555578c94d31",
@@ -156,7 +179,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "YdeSirSGHs9h",
         "outputId": "afe40e3c-311a-4b44-9bd9-8ca30dc9399c",
