Создано с помощью Colaboratory

--- a/tasks/1. Задания/Модуль №4. Ветвление.ipynb
+++ b/tasks/1. Задания/Модуль №4. Ветвление.ipynb
@@ -36,11 +36,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "DK55kJAgKZna"
+        "id": "DK55kJAgKZna",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "73084336-49f8-4e26-c735-71009cde5705"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n",
+            "чет\n"
+          ]
+        }
+      ],
       "source": [
         "n = int(input())\n",
         "if n % 2 != 0:\n",
@@ -60,11 +73,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "BiQ3IHAPKZus"
+        "id": "BiQ3IHAPKZus",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8b6f76f5-bb7d-43b0-ca06-08776673b48a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n",
+            "7\n",
+            "3\n"
+          ]
+        }
+      ],
       "source": [
         "a = int(input())\n",
         "b = int(input())\n",
@@ -85,11 +112,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "id": "5ND8zm9NKZz3"
+        "id": "5ND8zm9NKZz3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9f3d7ea0-d4fb-45d6-ec2b-8b476e380071"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "179\n",
+            "1\n"
+          ]
+        }
+      ],
       "source": [
         "n= int(input())\n",
         "if n > 0:\n",
@@ -111,11 +151,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
-        "id": "yNkJFYfeKZ4L"
+        "id": "yNkJFYfeKZ4L",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6f02cb10-6894-4efe-f69f-c7c7655dd24a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "179\n",
+            "да\n"
+          ]
+        }
+      ],
       "source": [
         "if len(input()) == 3:\n",
         "  print(\"да\")\n",
@@ -134,11 +187,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
-        "id": "MTsEFOygKZ8k"
+        "id": "MTsEFOygKZ8k",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "374e7557-9690-4c50-847f-c1fda7669395"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "-10\n",
+            "да\n"
+          ]
+        }
+      ],
       "source": [
         "a= int(input())\n",
         "b= int(input())\n",
@@ -159,11 +226,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
-        "id": "qihPbD8oKaEv"
+        "id": "qihPbD8oKaEv",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3d5d2073-d067-45b1-8e6f-650b28bff725"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "179\n",
+            "Да\n"
+          ]
+        }
+      ],
       "source": [
         "n = input()\n",
         "if int(n[0]) < int(n[1]) < int(n[2]):\n",
@@ -183,11 +263,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
-        "id": "rnbGpsZeKcFO"
+        "id": "rnbGpsZeKcFO",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5b2ba222-5610-409a-afc0-877981570263"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2332\n",
+            "Да\n"
+          ]
+        }
+      ],
       "source": [
         "n = input()\n",
         "if int(n[0])== int(n[3]) and int(n[1])== int(n[2]):\n",
@@ -207,20 +300,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "LTZAtKHWKcIk",
-        "outputId": "399251d9-6d35-4d08-cb93-03cefaa28152",
+        "outputId": "aafa83cf-c7f9-46b4-b068-badf18831ad0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "3\n"
+            "2\n",
+            "28\n"
           ]
         }
       ],
@@ -260,10 +354,25 @@
         "    print(0)\n"
       ],
       "metadata": {
-        "id": "75nYwdQPPkf3"
+        "id": "75nYwdQPPkf3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "38f0bf0e-dc20-4eac-83d3-a01b99190183"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "5\n",
+            "10\n",
+            "2\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -276,13 +385,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
-        "id": "E0vmAO-JKcNc"
+        "id": "E0vmAO-JKcNc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0b44ba65-1051-4eb4-e715-1a0efc47c079"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n",
+            "2\n",
+            "Белая\n"
+          ]
+        }
+      ],
       "source": [
-        "# Ваш код"
+        "v = int(input())\n",
+        "g= int(input())\n",
+        "if (v % 2 == g % 2):\n",
+        "  print(\"Чёрная\")\n",
+        "else:\n",
+        "  print(\"Белая\")"
       ]
     },
     {
@@ -296,13 +424,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
-        "id": "GM7OfGbLKcPc"
+        "id": "GM7OfGbLKcPc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "633e6416-2345-4318-a750-b39bde8818dd"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "1\n",
+            "2\n",
+            "6\n",
+            "Да\n"
+          ]
+        }
+      ],
       "source": [
-        "# Ваш код"
+        "v1 = int(input())\n",
+        "g1 = int(input())\n",
+        "v2 = int(input())\n",
+        "g2 = int(input())\n",
+        "\n",
+        "if (v1 % 2 == g1 % 2)==(v2 % 2 == g2 % 2):\n",
+        "  print(\"Да\")\n",
+        "else:\n",
+        "  print(\"Нет\")"
       ]
     },
     {
@@ -316,13 +468,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
-        "id": "38wUUO58KcR6"
+        "id": "38wUUO58KcR6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7438b118-203e-46eb-d651-0eaef306d896"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n",
+            "31\n",
+            "1-4-2023\n"
+          ]
+        }
+      ],
       "source": [
-        "# Ваш код"
+        "a = int(input())\n",
+        "b = int(input())\n",
+        "\n",
+        "if a == 12 and b == 31:\n",
+        "    print(\"1-1-2024\")\n",
+        "elif a == 2 and b == 28:\n",
+        "    print(\"1-3-2023\")\n",
+        "elif (a == 1 or a == 3 or a == 5 or a == 7 or a == 8 or a == 10) and b == 31:\n",
+        "    print(f'1-{a+1}-2023')\n",
+        "elif (a == 4 or a == 6 or a == 9 or a == 11) and b == 30:\n",
+        "    print(f'1-{a+1}-2023')\n",
+        "else:\n",
+        "    print(f'{b+1}-{a}-2023')"
       ]
     }
   ]
